sols/5/ast.intFloat/parse.output
Terminals unused in grammar

   AMPEREQUAL
   AMPERSAND
   AND
   AS
   ASSERT
   AT
   BACKQUOTE
   BAR
   BREAK
   CIRCUMFLEX
   CIRCUMFLEXEQUAL
   CLASS
   COMMA
   CONTINUE
   DEDENT
   DEL
   DOT
   DOUBLESLASHEQUAL
   DOUBLESTAR
   ELIF
   ELSE
   ENDMARKER
   EQEQUAL
   EXCEPT
   EXEC
   FINALLY
   FOR
   FROM
   GLOBAL
   GREATER
   GREATEREQUAL
   GRLT
   IF
   IMPORT
   IN
   INDENT
   IS
   LAMBDA
   LBRACE
   LEFTSHIFT
   LEFTSHIFTEQUAL
   LESS
   LESSEQUAL
   LSQB
   MINEQUAL
   NAME
   NOT
   NOTEQUAL
   NUMBER
   OR
   PASS
   PERCENTEQUAL
   PLUSEQUAL
   RAISE
   RBRACE
   RETURN
   RIGHTSHIFT
   RIGHTSHIFTEQUAL
   RSQB
   SEMI
   SLASHEQUAL
   STAREQUAL
   STRING
   TILDE
   TRY
   VBAREQUAL
   WHILE
   WITH
   YIELD


State 43 conflicts: 7 shift/reduce
State 44 conflicts: 7 shift/reduce
State 46 conflicts: 7 shift/reduce
State 48 conflicts: 7 shift/reduce
State 50 conflicts: 7 shift/reduce
State 52 conflicts: 7 shift/reduce
State 54 conflicts: 7 shift/reduce
State 57 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 2 shift/reduce
State 61 conflicts: 2 shift/reduce
State 62 conflicts: 2 shift/reduce


Grammar

    0 $accept: lines $end

    1 lines: lines expr CR
    2      | lines PRINT expr CR
    3      | lines IDENT EQ expr CR
    4      | lines expr PLUS EQ expr
    5      | lines expr MINUS EQ expr
    6      | lines expr STAR EQUAL expr
    7      | lines expr SLASH EQ expr
    8      | lines expr PERCENT EQ expr
    9      | lines expr DOUBLESLASH EQ expr
   10      | lines CR
   11      | %empty
   12      | lines funcdef CR

   13 funcdef: DEF IDENT LPAR RPAR COLON suite

   14 suite: NEWLINE

   15 expr: expr PLUS expr
   16     | expr MINUS expr
   17     | expr STAR expr
   18     | expr SLASH expr
   19     | expr DOUBLESLASH expr
   20     | expr PERCENT expr
   21     | expr DOUBLESTAREQUAL expr
   22     | MINUS FLOAT
   23     | MINUS INT
   24     | PLUS FLOAT
   25     | PLUS INT
   26     | LPAR expr RPAR
   27     | INT
   28     | FLOAT
   29     | IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
CR (258) 1 2 3 10 12
EQ (259) 3 4 5 7 8 9
INT (260) 23 25 27
FLOAT (261) 22 24 28
IDENT (262) 3 13 29
AMPEREQUAL (263)
AMPERSAND (264)
AND (265)
AS (266)
ASSERT (267)
AT (268)
BACKQUOTE (269)
BAR (270)
BREAK (271)
CIRCUMFLEX (272)
CIRCUMFLEXEQUAL (273)
CLASS (274)
COLON (275) 13
COMMA (276)
CONTINUE (277)
DEDENT (278)
DEF (279) 13
DEL (280)
DOT (281)
DOUBLESLASH (282) 9 19
DOUBLESLASHEQUAL (283)
DOUBLESTAR (284)
DOUBLESTAREQUAL (285) 21
ELIF (286)
ELSE (287)
ENDMARKER (288)
EQEQUAL (289)
EQUAL (290) 6
EXCEPT (291)
EXEC (292)
FINALLY (293)
FOR (294)
FROM (295)
GLOBAL (296)
GREATER (297)
GREATEREQUAL (298)
GRLT (299)
IF (300)
IMPORT (301)
IN (302)
INDENT (303)
IS (304)
LAMBDA (305)
LBRACE (306)
LEFTSHIFT (307)
LEFTSHIFTEQUAL (308)
LESS (309)
LESSEQUAL (310)
LPAR (311) 13 26
LSQB (312)
MINEQUAL (313)
MINUS (314) 5 16 22 23
NAME (315)
NEWLINE (316) 14
NOT (317)
NOTEQUAL (318)
NUMBER (319)
OR (320)
PASS (321)
PERCENT (322) 8 20
PERCENTEQUAL (323)
PLUS (324) 4 15 24 25
PLUSEQUAL (325)
PRINT (326) 2
RAISE (327)
RBRACE (328)
RETURN (329)
RIGHTSHIFT (330)
RIGHTSHIFTEQUAL (331)
RPAR (332) 13 26
RSQB (333)
SEMI (334)
SLASH (335) 7 18
SLASHEQUAL (336)
STAR (337) 6 17
STAREQUAL (338)
STRING (339)
TILDE (340)
TRY (341)
VBAREQUAL (342)
WHILE (343)
WITH (344)
YIELD (345)


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
lines (92)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12, on right: 0 1 2 3 4 5 6 7
    8 9 10 12
funcdef (93)
    on left: 13, on right: 12
suite (94)
    on left: 14, on right: 13
expr (95)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29, on right:
    1 2 3 4 5 6 7 8 9 15 16 17 18 19 20 21 26


State 0

    0 $accept: . lines $end

    $default  reduce using rule 11 (lines)

    lines  go to state 1


State 1

    0 $accept: lines . $end
    1 lines: lines . expr CR
    2      | lines . PRINT expr CR
    3      | lines . IDENT EQ expr CR
    4      | lines . expr PLUS EQ expr
    5      | lines . expr MINUS EQ expr
    6      | lines . expr STAR EQUAL expr
    7      | lines . expr SLASH EQ expr
    8      | lines . expr PERCENT EQ expr
    9      | lines . expr DOUBLESLASH EQ expr
   10      | lines . CR
   12      | lines . funcdef CR

    $end   shift, and go to state 2
    CR     shift, and go to state 3
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 6
    DEF    shift, and go to state 7
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10
    PRINT  shift, and go to state 11

    funcdef  go to state 12
    expr     go to state 13


State 2

    0 $accept: lines $end .

    $default  accept


State 3

   10 lines: lines CR .

    $default  reduce using rule 10 (lines)


State 4

   27 expr: INT .

    $default  reduce using rule 27 (expr)


State 5

   28 expr: FLOAT .

    $default  reduce using rule 28 (expr)


State 6

    3 lines: lines IDENT . EQ expr CR
   29 expr: IDENT .

    EQ  shift, and go to state 14

    $default  reduce using rule 29 (expr)


State 7

   13 funcdef: DEF . IDENT LPAR RPAR COLON suite

    IDENT  shift, and go to state 15


State 8

   26 expr: LPAR . expr RPAR

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 17


State 9

   22 expr: MINUS . FLOAT
   23     | MINUS . INT

    INT    shift, and go to state 18
    FLOAT  shift, and go to state 19


State 10

   24 expr: PLUS . FLOAT
   25     | PLUS . INT

    INT    shift, and go to state 20
    FLOAT  shift, and go to state 21


State 11

    2 lines: lines PRINT . expr CR

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 22


State 12

   12 lines: lines funcdef . CR

    CR  shift, and go to state 23


State 13

    1 lines: lines expr . CR
    4      | lines expr . PLUS EQ expr
    5      | lines expr . MINUS EQ expr
    6      | lines expr . STAR EQUAL expr
    7      | lines expr . SLASH EQ expr
    8      | lines expr . PERCENT EQ expr
    9      | lines expr . DOUBLESLASH EQ expr
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    CR               shift, and go to state 24
    DOUBLESLASH      shift, and go to state 25
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 27
    PERCENT          shift, and go to state 28
    PLUS             shift, and go to state 29
    SLASH            shift, and go to state 30
    STAR             shift, and go to state 31


State 14

    3 lines: lines IDENT EQ . expr CR

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 32


State 15

   13 funcdef: DEF IDENT . LPAR RPAR COLON suite

    LPAR  shift, and go to state 33


State 16

   29 expr: IDENT .

    $default  reduce using rule 29 (expr)


State 17

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr
   26     | LPAR expr . RPAR

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    RPAR             shift, and go to state 38
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40


State 18

   23 expr: MINUS INT .

    $default  reduce using rule 23 (expr)


State 19

   22 expr: MINUS FLOAT .

    $default  reduce using rule 22 (expr)


State 20

   25 expr: PLUS INT .

    $default  reduce using rule 25 (expr)


State 21

   24 expr: PLUS FLOAT .

    $default  reduce using rule 24 (expr)


State 22

    2 lines: lines PRINT expr . CR
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    CR               shift, and go to state 41
    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40


State 23

   12 lines: lines funcdef CR .

    $default  reduce using rule 12 (lines)


State 24

    1 lines: lines expr CR .

    $default  reduce using rule 1 (lines)


State 25

    9 lines: lines expr DOUBLESLASH . EQ expr
   19 expr: expr DOUBLESLASH . expr

    EQ     shift, and go to state 42
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 43


State 26

   21 expr: expr DOUBLESTAREQUAL . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 44


State 27

    5 lines: lines expr MINUS . EQ expr
   16 expr: expr MINUS . expr

    EQ     shift, and go to state 45
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 46


State 28

    8 lines: lines expr PERCENT . EQ expr
   20 expr: expr PERCENT . expr

    EQ     shift, and go to state 47
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 48


State 29

    4 lines: lines expr PLUS . EQ expr
   15 expr: expr PLUS . expr

    EQ     shift, and go to state 49
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 50


State 30

    7 lines: lines expr SLASH . EQ expr
   18 expr: expr SLASH . expr

    EQ     shift, and go to state 51
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 52


State 31

    6 lines: lines expr STAR . EQUAL expr
   17 expr: expr STAR . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    EQUAL  shift, and go to state 53
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 54


State 32

    3 lines: lines IDENT EQ expr . CR
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    CR               shift, and go to state 55
    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40


State 33

   13 funcdef: DEF IDENT LPAR . RPAR COLON suite

    RPAR  shift, and go to state 56


State 34

   19 expr: expr DOUBLESLASH . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 43


State 35

   16 expr: expr MINUS . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 46


State 36

   20 expr: expr PERCENT . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 48


State 37

   15 expr: expr PLUS . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 50


State 38

   26 expr: LPAR expr RPAR .

    $default  reduce using rule 26 (expr)


State 39

   18 expr: expr SLASH . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 52


State 40

   17 expr: expr STAR . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 54


State 41

    2 lines: lines PRINT expr CR .

    $default  reduce using rule 2 (lines)


State 42

    9 lines: lines expr DOUBLESLASH EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 57


State 43

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   19     | expr DOUBLESLASH expr .
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    DOUBLESLASH      [reduce using rule 19 (expr)]
    DOUBLESTAREQUAL  [reduce using rule 19 (expr)]
    MINUS            [reduce using rule 19 (expr)]
    PERCENT          [reduce using rule 19 (expr)]
    PLUS             [reduce using rule 19 (expr)]
    SLASH            [reduce using rule 19 (expr)]
    STAR             [reduce using rule 19 (expr)]
    $default         reduce using rule 19 (expr)


State 44

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr
   21     | expr DOUBLESTAREQUAL expr .

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    DOUBLESLASH      [reduce using rule 21 (expr)]
    DOUBLESTAREQUAL  [reduce using rule 21 (expr)]
    MINUS            [reduce using rule 21 (expr)]
    PERCENT          [reduce using rule 21 (expr)]
    PLUS             [reduce using rule 21 (expr)]
    SLASH            [reduce using rule 21 (expr)]
    STAR             [reduce using rule 21 (expr)]
    $default         reduce using rule 21 (expr)


State 45

    5 lines: lines expr MINUS EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 58


State 46

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   16     | expr MINUS expr .
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    DOUBLESLASH      [reduce using rule 16 (expr)]
    DOUBLESTAREQUAL  [reduce using rule 16 (expr)]
    MINUS            [reduce using rule 16 (expr)]
    PERCENT          [reduce using rule 16 (expr)]
    PLUS             [reduce using rule 16 (expr)]
    SLASH            [reduce using rule 16 (expr)]
    STAR             [reduce using rule 16 (expr)]
    $default         reduce using rule 16 (expr)


State 47

    8 lines: lines expr PERCENT EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 59


State 48

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   20     | expr PERCENT expr .
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    DOUBLESLASH      [reduce using rule 20 (expr)]
    DOUBLESTAREQUAL  [reduce using rule 20 (expr)]
    MINUS            [reduce using rule 20 (expr)]
    PERCENT          [reduce using rule 20 (expr)]
    PLUS             [reduce using rule 20 (expr)]
    SLASH            [reduce using rule 20 (expr)]
    STAR             [reduce using rule 20 (expr)]
    $default         reduce using rule 20 (expr)


State 49

    4 lines: lines expr PLUS EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 60


State 50

   15 expr: expr . PLUS expr
   15     | expr PLUS expr .
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    DOUBLESLASH      [reduce using rule 15 (expr)]
    DOUBLESTAREQUAL  [reduce using rule 15 (expr)]
    MINUS            [reduce using rule 15 (expr)]
    PERCENT          [reduce using rule 15 (expr)]
    PLUS             [reduce using rule 15 (expr)]
    SLASH            [reduce using rule 15 (expr)]
    STAR             [reduce using rule 15 (expr)]
    $default         reduce using rule 15 (expr)


State 51

    7 lines: lines expr SLASH EQ . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 61


State 52

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   18     | expr SLASH expr .
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    DOUBLESLASH      [reduce using rule 18 (expr)]
    DOUBLESTAREQUAL  [reduce using rule 18 (expr)]
    MINUS            [reduce using rule 18 (expr)]
    PERCENT          [reduce using rule 18 (expr)]
    PLUS             [reduce using rule 18 (expr)]
    SLASH            [reduce using rule 18 (expr)]
    STAR             [reduce using rule 18 (expr)]
    $default         reduce using rule 18 (expr)


State 53

    6 lines: lines expr STAR EQUAL . expr

    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5
    IDENT  shift, and go to state 16
    LPAR   shift, and go to state 8
    MINUS  shift, and go to state 9
    PLUS   shift, and go to state 10

    expr  go to state 62


State 54

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   17     | expr STAR expr .
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    DOUBLESLASH      [reduce using rule 17 (expr)]
    DOUBLESTAREQUAL  [reduce using rule 17 (expr)]
    MINUS            [reduce using rule 17 (expr)]
    PERCENT          [reduce using rule 17 (expr)]
    PLUS             [reduce using rule 17 (expr)]
    SLASH            [reduce using rule 17 (expr)]
    STAR             [reduce using rule 17 (expr)]
    $default         reduce using rule 17 (expr)


State 55

    3 lines: lines IDENT EQ expr CR .

    $default  reduce using rule 3 (lines)


State 56

   13 funcdef: DEF IDENT LPAR RPAR . COLON suite

    COLON  shift, and go to state 63


State 57

    9 lines: lines expr DOUBLESLASH EQ expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    MINUS     [reduce using rule 9 (lines)]
    PLUS      [reduce using rule 9 (lines)]
    $default  reduce using rule 9 (lines)


State 58

    5 lines: lines expr MINUS EQ expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    MINUS     [reduce using rule 5 (lines)]
    PLUS      [reduce using rule 5 (lines)]
    $default  reduce using rule 5 (lines)


State 59

    8 lines: lines expr PERCENT EQ expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    MINUS     [reduce using rule 8 (lines)]
    PLUS      [reduce using rule 8 (lines)]
    $default  reduce using rule 8 (lines)


State 60

    4 lines: lines expr PLUS EQ expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    MINUS     [reduce using rule 4 (lines)]
    PLUS      [reduce using rule 4 (lines)]
    $default  reduce using rule 4 (lines)


State 61

    7 lines: lines expr SLASH EQ expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    MINUS     [reduce using rule 7 (lines)]
    PLUS      [reduce using rule 7 (lines)]
    $default  reduce using rule 7 (lines)


State 62

    6 lines: lines expr STAR EQUAL expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . STAR expr
   18     | expr . SLASH expr
   19     | expr . DOUBLESLASH expr
   20     | expr . PERCENT expr
   21     | expr . DOUBLESTAREQUAL expr

    DOUBLESLASH      shift, and go to state 34
    DOUBLESTAREQUAL  shift, and go to state 26
    MINUS            shift, and go to state 35
    PERCENT          shift, and go to state 36
    PLUS             shift, and go to state 37
    SLASH            shift, and go to state 39
    STAR             shift, and go to state 40

    MINUS     [reduce using rule 6 (lines)]
    PLUS      [reduce using rule 6 (lines)]
    $default  reduce using rule 6 (lines)


State 63

   13 funcdef: DEF IDENT LPAR RPAR COLON . suite

    NEWLINE  shift, and go to state 64

    suite  go to state 65


State 64

   14 suite: NEWLINE .

    $default  reduce using rule 14 (suite)


State 65

   13 funcdef: DEF IDENT LPAR RPAR COLON suite .

    $default  reduce using rule 13 (funcdef)
